--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "ace-svelte",
+	"name": "ace.svelte",
 	"version": "0.0.0",
 	"scripts": {
 		"dev": "vite dev",
@@ -29,34 +29,37 @@
 	"files": [
 		"dist"
 	],
+	"svelte": "./dist/index.js",
+	"types": "./dist/index.d.ts",
+	"type": "module",
+	"description": "A UI Library for Svelte",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/yzITI/ace-ui.git"
+	},
+	"bugs": {
+		"url": "https://github.com/yzITI/ace-ui/issues"
+	},
+	"keywords": [
+		"Svelte",
+		"UI Library"
+	],
+	"author": "yzITI",
+	"license": "MIT",
+	"dependencies": {
+		"@mdi/js": "^7.2.96"
+	},
 	"peerDependencies": {
 		"svelte": "^3.54.0"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.5.0",
-		"@sveltejs/package": "^2.0.0",
-		"publint": "^0.1.9",
-		"svelte": "^3.54.0",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^4.2.0"
-	},
-	"svelte": "./dist/index.js",
-	"types": "./dist/index.d.ts",
-	"type": "module",
-	"description": "A UI Library for Svelte",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/yzITI/ace-ui.git"
-  },
-  "keywords": [
-    "Svelte",
-    "UI Library"
-  ],
-  "author": "yzITI",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/yzITI/ace-ui/issues"
-  }
+		"@sveltejs/kit": "^1.15.0",
+		"@sveltejs/package": "^2.0.2",
+		"publint": "^0.1.11",
+		"svelte": "^3.58.0",
+		"tslib": "^2.5.0",
+		"typescript": "^5.0.3",
+		"vite": "^4.2.1"
+	}
 }
