--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"type": "module",
-	"description": "A UI Library for Svelte",
+	"description": "A Progressive UI Library for Svelte",
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/yzITI/ace-ui.git"
