--- a/package.json
+++ b/package.json
@@ -1,65 +1,64 @@
 {
-	"name": "ace.svelte",
-	"version": "0.0.2",
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build && npm run package",
-		"preview": "vite preview",
-		"package": "svelte-kit sync && svelte-package && publint",
-		"prepublishOnly": "npm run package"
-	},
-	"exports": {
-		".": {
-			"types": "./dist/index.d.ts",
-			"svelte": "./dist/index.js"
-		},
-		"./A": {
-			"types": "./dist/A/index.d.ts",
-			"svelte": "./dist/A/index.js"
-		},
-		"./Ace": {
-			"types": "./dist/Ace/index.d.ts",
-			"svelte": "./dist/Ace/index.js"
-		},
-		"./utils": {
-			"types": "./dist/utils/index.d.ts",
-			"svelte": "./dist/utils/index.js"
-		}
-	},
-	"files": [
-		"dist"
-	],
-	"svelte": "./dist/index.js",
-	"types": "./dist/index.d.ts",
-	"type": "module",
-	"description": "A Progressive UI Library for Svelte",
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/yzITI/ace-ui.git"
-	},
-	"bugs": {
-		"url": "https://github.com/yzITI/ace-ui/issues"
-	},
-	"keywords": [
-		"Svelte",
-		"UI Library"
-	],
-	"author": "yzITI",
-	"license": "MIT",
-	"dependencies": {
-		"@mdi/js": "^7.2.96"
-	},
-	"peerDependencies": {
-		"svelte": "^3.54.0"
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.1.0",
-		"@sveltejs/kit": "^1.25.0",
-		"@sveltejs/package": "^2.2.2",
-		"publint": "^0.2.2",
-		"svelte": "^4.2.0",
-		"tslib": "^2.6.2",
-		"typescript": "^5.2.2",
-		"vite": "^4.4.9"
-	}
+  "name": "ace.svelte",
+  "version": "0.0.3",
+  "scripts": {
+    "dev": "vite dev",
+    "build": "vite build && npm run package",
+    "preview": "vite preview",
+    "package": "svelte-kit sync && svelte-package && publint",
+    "prepublishOnly": "npm run package"
+  },
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "svelte": "./dist/index.js"
+    },
+    "./A": {
+      "types": "./dist/A/index.d.ts",
+      "svelte": "./dist/A/index.js"
+    },
+    "./Ace": {
+      "types": "./dist/Ace/index.d.ts",
+      "svelte": "./dist/Ace/index.js"
+    },
+    "./utils": {
+      "types": "./dist/utils/index.d.ts",
+      "svelte": "./dist/utils/index.js"
+    }
+  },
+  "files": [
+    "dist"
+  ],
+  "svelte": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "type": "module",
+  "description": "A Progressive UI Library for Svelte",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/yzITI/ace-ui.git"
+  },
+  "bugs": {
+    "url": "https://github.com/yzITI/ace-ui/issues"
+  },
+  "keywords": [
+    "Svelte",
+    "UI Library"
+  ],
+  "author": "yzITI",
+  "license": "MIT",
+  "peerDependencies": {
+    "@mdi/js": "7.x",
+    "svelte": "4.x"
+  },
+  "devDependencies": {
+    "@mdi/js": "^7.2.96",
+    "@sveltejs/adapter-auto": "^2.1.0",
+    "@sveltejs/kit": "^1.25.0",
+    "@sveltejs/package": "^2.2.2",
+    "publint": "^0.2.2",
+    "svelte": "^4.2.0",
+    "tslib": "^2.6.2",
+    "typescript": "^5.2.2",
+    "vite": "^4.4.9"
+  }
 }
