--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "ace.svelte",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "scripts": {
     "dev": "vite dev",
     "build": "vite build && npm run package",
     "preview": "vite preview",
     "package": "svelte-kit sync && svelte-package && publint",
-    "prepublishOnly": "npm run package"
+    "prepublishOnly": "npm run package",
+    "publish": "npm publish --access public"
   },
   "exports": {
     ".": {
@@ -57,7 +58,7 @@
     "@sveltejs/package": "^2.3.1",
     "@sveltejs/vite-plugin-svelte": "^3.1.0",
     "publint": "^0.2.7",
-    "svelte": "5.0.0-next.110",
+    "svelte": "5.0.0-next.115",
     "tslib": "^2.6.2",
     "typescript": "^5.4.5",
     "vite": "^5.2.10"
