--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "preview": "vite preview",
     "package": "svelte-kit sync && svelte-package && publint",
     "prepublishOnly": "npm run package",
-    "publish": "npm publish --access public"
+    "public": "npm publish --access public"
   },
   "exports": {
     ".": {
