--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ace.svelte",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "scripts": {
     "dev": "vite dev",
     "build": "vite build && npm run package",
@@ -49,18 +49,18 @@
   "license": "MIT",
   "peerDependencies": {
     "@mdi/js": "7.x",
-    "svelte": "5.x"
+    "svelte": "^5.0.0-next.0"
   },
   "devDependencies": {
     "@mdi/js": "^7.4.47",
-    "@sveltejs/adapter-auto": "^3.2.0",
-    "@sveltejs/kit": "^2.5.7",
+    "@sveltejs/adapter-auto": "^3.2.1",
+    "@sveltejs/kit": "^2.5.10",
     "@sveltejs/package": "^2.3.1",
     "@sveltejs/vite-plugin-svelte": "^3.1.0",
-    "publint": "^0.2.7",
-    "svelte": "5.0.0-next.115",
+    "publint": "^0.2.8",
+    "svelte": "^5.0.0-next.0",
     "tslib": "^2.6.2",
     "typescript": "^5.4.5",
-    "vite": "^5.2.10"
+    "vite": "^5.2.12"
   }
 }
